add print to test

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,5 +27,7 @@ jobs:
         pip install pandas
 
     - name: Run tests
-      run: python execute.py "testfiles/testfile1.csv" "testfiles/testfile2.csv" testoutput.csv
+      run: |
+        python execute.py "testfiles/testfile1.csv" "testfiles/testfile2.csv" testoutput.csv
+        cat testoutput.csv
 
